fix missing image part 3,4